adição de arquivos

--- a/card_lista_aviso_licitacao.html
+++ b/card_lista_aviso_licitacao.html
@@ -68,7 +68,7 @@
                           <p class="card-text"><strong>Objeto: </strong>Contratação de empresa especializada em confecção de camisas estilizadas e fardamentos especializada para épocas onde o inverno é rigoroso. Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt, sequi! Tempora iste cumque maiores, provident magni quidem repellat, alias voluptates iusto sit id. Sequi facere consectetur distinctio quas eaque quia</p>
                           <hr>
                             <p><strong>Publicado em: </strong>01/01/2024</p>
-                            <p><strong>Sessão de Abertura: </strong>02/01/2024</p>
+                            <p><strong><em>Sessão de Abertura: </em></strong>02/01/2024</p>
                             <p><strong>Horário: </strong> 09:00</p>
                             <h5>Informações ou Editais</h5>
                             <ul>
